--- a/blender/src/index.html
+++ b/blender/src/index.html
@@ -6,6 +6,10 @@
     <title>ThreeJS Starter</title>
   </head>
   <body>
+    <div class="progress-bar-container">
+      <label for="progress-bar">Loading...</label>
+      <progress id="progress-bar" value="0" max="100"></progress>
+    </div>
     <div class="container">
       <h1>A phone</h1>
       <p>The future is now</p>
